[gd_scene load_steps=23 format=2]

[ext_resource path="res://Shaders/Light1.png" type="Texture" id=1]
[ext_resource path="res://Levels/Menu/AreaImages/Hollowgrove.png" type="Texture" id=2]
[ext_resource path="res://Levels/Menu/AreaImages/TheWanderingOak.png" type="Texture" id=3]
[ext_resource path="res://Levels/Menu/LoadGameScreen.gd" type="Script" id=4]
[ext_resource path="res://Levels/Menu/AreaImages/TheVaults.png" type="Texture" id=5]
[ext_resource path="res://Sounds/UI/Hover.mp3" type="AudioStream" id=6]
[ext_resource path="res://Sounds/UI/Click.mp3" type="AudioStream" id=7]

[sub_resource type="DynamicFontData" id=549]
font_path = "res://Fonts/JenrivTitlingRegular-x3RKV.otf"

[sub_resource type="DynamicFont" id=887]
size = 43
outline_size = 1
outline_color = Color( 0.713726, 0.454902, 0.0235294, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 549 )

[sub_resource type="Theme" id=551]
default_font = SubResource( 887 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.203922, 0.203922, 0.203922, 0.2 )
Button/colors/font_color_focus = Color( 1, 0.756863, 0.560784, 1 )
Button/colors/font_color_hover = Color( 1, 0.756863, 0.560784, 1 )
Button/colors/font_color_pressed = Color( 1, 0.447059, 0, 1 )

[sub_resource type="Animation" id=864]
resource_name = "Hover"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.713726, 0.262745, 0.196078 ), Color( 1, 0.713726, 0.262745, 0.784314 ) ]
}

[sub_resource type="Animation" id=865]
resource_name = "Inactive"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=870]
resource_name = "Active"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2399.62, 632.022 ), Vector2( 2399.62, 632.022 ), Vector2( 1573.04, 632.022 ), Vector2( 1573.04, 632.022 ) ]
}

[sub_resource type="DynamicFontData" id=876]
font_path = "res://Fonts/BirchLeaf.ttf"

[sub_resource type="DynamicFont" id=877]
size = 80
outline_size = 1
outline_color = Color( 1, 0.713726, 0.262745, 0.784314 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 876 )

[sub_resource type="Theme" id=875]
default_font = SubResource( 877 )

[sub_resource type="Animation" id=866]
resource_name = "Hover"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.713726, 0.262745, 0.196078 ), Color( 1, 0.713726, 0.262745, 0.784314 ) ]
}

[sub_resource type="Animation" id=867]
resource_name = "Inactive"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=871]
resource_name = "Active"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2399.62, 632.022 ), Vector2( 2399.62, 632.022 ), Vector2( 1573.04, 632.022 ), Vector2( 1573.04, 632.022 ) ]
}

[sub_resource type="Animation" id=868]
resource_name = "Hover"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.713726, 0.262745, 0.196078 ), Color( 1, 0.713726, 0.262745, 0.784314 ) ]
}

[sub_resource type="Animation" id=869]
resource_name = "Inactive"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=872]
resource_name = "Active"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2399.62, 632.022 ), Vector2( 2399.62, 632.022 ), Vector2( 1573.04, 632.022 ), Vector2( 1573.04, 632.022 ) ]
}

[node name="LoadGameScreen" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 154.882, 603.523 ],
"_edit_vertical_guides_": [ 75.593, 121.227, 1920.02, 2746.29, 484.0 ]
}

[node name="Load" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Saves" type="Control" parent="Load"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ChapterIEerie" type="Node2D" parent="Load/Saves"]
visible = false

[node name="ChapterI" type="Button" parent="Load/Saves/ChapterIEerie"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 121.0
margin_top = 314.0
margin_right = 713.0
margin_bottom = 364.0
focus_mode = 0
theme = SubResource( 551 )
enabled_focus_mode = 0
text = "Chapter I - Hollowgrove Haven"
flat = true
align = 0
icon_align = 1
expand_icon = true

[node name="Sprite" type="Sprite" parent="Load/Saves/ChapterIEerie/ChapterI"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( 362.882, 22.4336 )
scale = Vector2( 8.35937, 0.547514 )
texture = ExtResource( 1 )

[node name="Anim" type="AnimationPlayer" parent="Load/Saves/ChapterIEerie/ChapterI"]
reset_on_save = false
anims/Hover = SubResource( 864 )
anims/Inactive = SubResource( 865 )

[node name="AreaBrief" type="Node2D" parent="Load/Saves/ChapterIEerie"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Load/Saves/ChapterIEerie/AreaBrief"]
reset_on_save = false
anims/Active = SubResource( 870 )

[node name="Sprite" type="Sprite" parent="Load/Saves/ChapterIEerie/AreaBrief"]
position = Vector2( 2399.62, 632.022 )
scale = Vector2( 0.361111, 0.361111 )
texture = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="Load/Saves/ChapterIEerie/AreaBrief/Sprite"]
margin_left = -627.0
margin_top = -79.0
margin_right = 950.0
margin_bottom = 1219.0
theme = SubResource( 875 )
tab_size = 6
text = "	\"A secluded refuge where the scent of herbs lingers in the air, and shelves sag under the weight of aged tomes and alchemical vials. 
	Flickering candlelight dances across the wooden walls, illuminating a life of quiet study and careful preparation. 
	Here, amidst the bubbling brews and drying herbs, Hemwick refines his craft, unaware that soon, the world will call him beyond these walls once more.\""
scroll_active = false

[node name="Inn" type="Node2D" parent="Load/Saves"]
visible = false

[node name="ChapterII" type="Button" parent="Load/Saves/Inn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 121.0
margin_top = 364.0
margin_right = 823.0
margin_bottom = 414.0
focus_mode = 0
theme = SubResource( 551 )
enabled_focus_mode = 0
text = "Chapter II - The Wandering Oak"
flat = true
align = 0
icon_align = 1
expand_icon = true

[node name="Sprite" type="Sprite" parent="Load/Saves/Inn/ChapterII"]
modulate = Color( 1, 0.713726, 0.262745, 0.196078 )
show_behind_parent = true
position = Vector2( 353.28, 22.4336 )
scale = Vector2( 8.9766, 0.547514 )
texture = ExtResource( 1 )

[node name="Anim" type="AnimationPlayer" parent="Load/Saves/Inn/ChapterII"]
reset_on_save = false
anims/Hover = SubResource( 866 )
anims/Inactive = SubResource( 867 )

[node name="AreaBrief" type="Node2D" parent="Load/Saves/Inn"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Load/Saves/Inn/AreaBrief"]
reset_on_save = false
anims/Active = SubResource( 871 )

[node name="Sprite" type="Sprite" parent="Load/Saves/Inn/AreaBrief"]
position = Vector2( 2399.62, 632.022 )
scale = Vector2( 0.361111, 0.361111 )
texture = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="Load/Saves/Inn/AreaBrief/Sprite"]
margin_left = -627.0
margin_top = -79.0
margin_right = 950.0
margin_bottom = 1219.0
theme = SubResource( 875 )
tab_size = 10
text = "	\"After countless trials, Hemwick finds solace in the warmth of a humble inn. The fire crackles in the hearth, and the scent of a fresh meal fills the air.
	Here, the weary can rest, share tales of their journeys, and find new paths forward. But even in the comfort of this haven, not all is as it seems. The shadows of past adventures linger, and new quests await. 
	The journey is far from over, and the road ahead calls for new decisions...\""
scroll_active = false

[node name="ChapterIIIDungeon" type="Node2D" parent="Load/Saves"]
visible = false

[node name="ChapterIII" type="Button" parent="Load/Saves/ChapterIIIDungeon"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 121.0
margin_top = 414.0
margin_right = 642.0
margin_bottom = 464.0
focus_mode = 0
theme = SubResource( 551 )
enabled_focus_mode = 0
text = "Chapter IIi - The VAults"
flat = true
align = 0
icon_align = 1
expand_icon = true

[node name="Sprite" type="Sprite" parent="Load/Saves/ChapterIIIDungeon/ChapterIII"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( 260.342, 22.4336 )
scale = Vector2( 7.12591, 0.547514 )
texture = ExtResource( 1 )

[node name="Anim" type="AnimationPlayer" parent="Load/Saves/ChapterIIIDungeon/ChapterIII"]
reset_on_save = false
anims/Hover = SubResource( 868 )
anims/Inactive = SubResource( 869 )

[node name="AreaBrief" type="Node2D" parent="Load/Saves/ChapterIIIDungeon"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Load/Saves/ChapterIIIDungeon/AreaBrief"]
reset_on_save = false
anims/Active = SubResource( 872 )

[node name="Sprite" type="Sprite" parent="Load/Saves/ChapterIIIDungeon/AreaBrief"]
position = Vector2( 2399.62, 632.022 )
scale = Vector2( 0.361111, 0.361111 )
texture = ExtResource( 5 )

[node name="RichTextLabel" type="RichTextLabel" parent="Load/Saves/ChapterIIIDungeon/AreaBrief/Sprite"]
margin_left = -627.0
margin_top = -79.0
margin_right = 950.0
margin_bottom = 1219.0
theme = SubResource( 875 )
tab_size = 10
text = "	\"Deep beneath the earth lies an ancient vault, sealed away for reasons long forgotten. The air is thick with dust and silence, yet the echoes of the past reverberate through the cold stone walls. 
	Hemwick must navigate treacherous traps, face hidden horrors, and uncover the secrets of this forsaken place. What lies beneath is far darker than it seems...\""
scroll_active = false

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[connection signal="mouse_entered" from="Load/Saves/ChapterIEerie/ChapterI" to="." method="_on_ChapterI_mouse_entered"]
[connection signal="mouse_exited" from="Load/Saves/ChapterIEerie/ChapterI" to="." method="_on_ChapterI_mouse_exited"]
[connection signal="pressed" from="Load/Saves/ChapterIEerie/ChapterI" to="." method="_on_ChapterI_pressed"]
[connection signal="mouse_entered" from="Load/Saves/Inn/ChapterII" to="." method="_on_ChapterII_mouse_entered"]
[connection signal="mouse_exited" from="Load/Saves/Inn/ChapterII" to="." method="_on_ChapterII_mouse_exited"]
[connection signal="pressed" from="Load/Saves/Inn/ChapterII" to="." method="_on_ChapterII_pressed"]
[connection signal="mouse_entered" from="Load/Saves/ChapterIIIDungeon/ChapterIII" to="." method="_on_ChapterIII_mouse_entered"]
[connection signal="mouse_exited" from="Load/Saves/ChapterIIIDungeon/ChapterIII" to="." method="_on_ChapterIII_mouse_exited"]
[connection signal="pressed" from="Load/Saves/ChapterIIIDungeon/ChapterIII" to="." method="_on_ChapterIII_pressed"]
